# chatgpt-todo

./: README.md
db/base/: 0.0.1.sql
react-app/: package-lock.json  package.json
react-app/src/: App.css  App.js  TodoTracker.js
todo-service/: Cargo.toml
todo-service/src/: main.rs
