[package]
name = "todo-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.7.0"
actix-web = "4.2.1"
env_logger = "0.10.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = "1.23.1"
tokio-postgres = "0.7.7"
